loco-gen/tests/templates/snapshots/generate[migration_file]@empty_migration.snap
---
source: loco-gen/tests/templates/migration.rs
expression: "fs::read_to_string(&migration_file).expect(\"Failed to read the migration file\")"
snapshot_kind: text
---
use sea_orm_migration::{prelude::*, schema::*};

#[derive(DeriveMigrationName)]
pub struct Migration;

#[async_trait::async_trait]
impl MigrationTrait for Migration {
    async fn up(&self, m: &SchemaManager) -> Result<(), DbErr> {
        // Loco could not infer a schema change from the name `FixUsersTable`, so this
        // migration does nothing yet. Write the change here — the helpers in
        // `loco_rs::schema` (`add_column`, `remove_column`, `rename_column`,
        // `add_reference`, `create_table`, ...) cover the common cases — and
        // give `down()` the inverse. Until then `db migrate` panics here rather
        // than recording a migration that changed nothing.
        todo!("implement `up()` for the `FixUsersTable` migration")
    }

    async fn down(&self, m: &SchemaManager) -> Result<(), DbErr> {
        Ok(())
    }
}
