loco-gen/tests/templates/snapshots/generate[migration_file]@remove_columns_migration.snap
---
source: loco-gen/tests/templates/migration.rs
expression: "fs::read_to_string(&migration_file).expect(\"Failed to read the migration file\")"
---
use loco_rs::schema::*;
use sea_orm_migration::prelude::*;

#[derive(DeriveMigrationName)]
pub struct Migration;

#[async_trait::async_trait]
impl MigrationTrait for Migration {
    async fn up(&self, m: &SchemaManager) -> Result<(), DbErr> {
        remove_column(m, "users", "name").await?;
        remove_column(m, "users", "age").await?;
        Ok(())
    }

    async fn down(&self, m: &SchemaManager) -> Result<(), DbErr> {
        add_column(m, "users", "name", ColType::StringNull).await?;
        add_column(m, "users", "age", ColType::BigIntegerNull).await?;
        Ok(())
    }
}
