loco-gen/tests/templates/snapshots/generate[shared_subject_t_file]@mailer.snap
---
source: loco-gen/tests/templates/mailer.rs
expression: "fs::read_to_string(path).unwrap_or_else(|_| panic!(\"{name} missing\"))"
---
{% block subject %}Email{% endblock %}
