loco-gen/tests/templates/snapshots/generate[tests_controller_mod_rs]@Api_controller.snap
---
source: loco-gen/tests/templates/controller.rs
expression: "fs::read_to_string(test_controllers_path.join(\"movie.rs\")).expect(\"test file missing\")"
---
use tester::app::App;
use loco_rs::testing::prelude::*;
use serial_test::serial;

#[tokio::test]
#[serial]
async fn can_get_movies() {
    request::<App, _, _>(|request, _ctx| async move {
        let res = request.get("/api/movies").await;
        assert_eq!(res.status_code(), 200);

        // you can assert content like this:
        // assert_eq!(res.text(), "content");
    })
    .await;
}

#[tokio::test]
#[serial]
async fn can_call_GET() {
    request::<App, _, _>(|request, _ctx| async move {
        let res = request.get("/api/movies/GET").await;
        assert_eq!(res.status_code(), 200);
    })
    .await;
}

#[tokio::test]
#[serial]
async fn can_call_POST() {
    request::<App, _, _>(|request, _ctx| async move {
        let res = request.get("/api/movies/POST").await;
        assert_eq!(res.status_code(), 200);
    })
    .await;
}
